--- a/package.json
+++ b/package.json
@@ -22,11 +22,16 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "image-webpack-loader": "^3.4.2",
     "json-loader": "^0.5.7",
     "node-sass": "4.6.1",
     "normalize.css": "7.0.0",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-import": "^11.1.0",
+    "postcss-loader": "^2.1.3",
+    "postcss-scss": "^1.0.5",
     "react": "16.0.0",
     "react-dom": "16.0.0",
     "react-easy-transition": "^1.2.6",
