--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boilerplate",
+  "name": "philip-fabianek__portfolio-website",
   "version": "1.0.0",
   "description": "",
   "scripts": {
@@ -16,11 +16,13 @@
     "web development"
   ],
   "dependencies": {
+    "aos": "^2.2.0",
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
+    "core-js": "^2.5.6",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
@@ -32,6 +34,7 @@
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.3",
     "postcss-scss": "^1.0.5",
+    "raf": "^3.4.0",
     "react": "16.0.0",
     "react-dom": "16.0.0",
     "react-easy-transition": "^1.2.6",
